# Docufy_OCR

./: pyproject.toml
.github/workflows/: publish.yaml
docufy/: _init__.py
docufy-ocr/: __init__.py
docufy_ocr/: __init__.py
src/: main.py
