[project]
name = "docufy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.7",
    "pymupdf>=1.26.3",
    "pytesseract>=0.3.13",
]

[tool.uv.workspace]
members = [
    "markitdown",
]
