[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docufy"
dynamic = ["version"]
description = "OCR library"
readme = "README.md"
requires-python = ">=3.12"
licenses = "Apache-2.0"
authors = [
    { name = "gabe cornejo" }
]
dependencies = [
    "pymupdf>=1.26.3",
    "pytesseract>=0.3.13",
    "pillow>=10.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["docufy"]

[tool.hatch.version]
path = "docufy/__init__.py"
